--- a/veloAE_preprocess.ipynb
+++ b/veloAE_preprocess.ipynb
@@ -10,12 +10,13 @@
     "import scvelo as scv\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scanpy as sc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scanpy==1.8.2 anndata==0.7.8 umap==0.5.3 numpy==1.20.3 scipy==1.6.2 pandas==1.2.4 scikit-learn==0.24.1 statsmodels==0.12.2 pynndescent==0.5.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc.settings.verbosity = 3             # verbosity: errors (0), warnings (1), info (2), hints (3)\n",
+    "sc.logging.print_header()\n",
+    "sc.settings.set_figure_params(dpi=80, facecolor='white')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,64 +88,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc1_cellranger-outs-filtered_feature_bc_matrix-matrix.h5ad\n",
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc1_cellranger-velocyto-ncc1_cellranger.h5ad\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnnData object with n_obs × n_vars = 2506 × 36601\n",
+      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size'\n",
+      "    var: 'gene_ids', 'feature_types', 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
+      "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n",
+      "Index(['ncc1_AAACCCATCAGCAATC', 'ncc1_AAACGAACACGGTGCT',\n",
+      "       'ncc1_AAACGAACATTGTCGA', 'ncc1_AAACGCTCAAGAGGTC',\n",
+      "       'ncc1_AAACGCTGTGCCCGTA', 'ncc1_AAAGAACCAGAGGTAC',\n",
+      "       'ncc1_AAAGAACTCTTGCAAG', 'ncc1_AAAGGATCACCATAAC',\n",
+      "       'ncc1_AAAGGATCATGGCGCT', 'ncc1_AAAGGGCTCTTGGCTC',\n",
+      "       ...\n",
+      "       'ncc1_TTTGACTTCAAGTGTC', 'ncc1_TTTGATCAGAGCGACT',\n",
+      "       'ncc1_TTTGGAGCATACAGAA', 'ncc1_TTTGGAGTCAAGTCGT',\n",
+      "       'ncc1_TTTGGTTGTTTGCCGG', 'ncc1_TTTGGTTTCTCCTACG',\n",
+      "       'ncc1_TTTGTTGAGCATGATA', 'ncc1_TTTGTTGAGGTTGTTC',\n",
+      "       'ncc1_TTTGTTGCACACGTGC', 'ncc1_TTTGTTGGTTTCCAAG'],\n",
+      "      dtype='object', length=2506)\n"
      ]
     }
    ],
    "source": [
     "sampleL = [\"ncc1\", \"ncc2\", \"ncc3\", \"ncc4\"]\n",
+    "adata = sc.read_10x_mtx('/storage/holab/linxy/vivian/' + sampleL[0] + '_cellranger/outs/filtered_feature_bc_matrix/', var_names='gene_symbols', cache=True)                             \n",
     "ldata =  scv.read(\"/storage/holab/linxy/vivian/\" + sampleL[0] + \"_cellranger/velocyto/\" + sampleL[0] + \"_cellranger.loom\", cache=True)\n",
-    "ldata.var_names_make_unique()\n",
-    "#print(ldata.obs_names)\n",
-    "#obs_name_rep = ldata.obs_names.str.replace('ncc','s')\n",
-    "#ldata.obs_names = obs_name_rep\n",
-    "#print(ldata.obs_names)"
+    "adata.var_names_make_unique()\n",
+    "adata = scv.utils.merge(adata, ldata)\n",
+    "adata.obs_names = sampleL[0] + '_' + adata.obs_names\n",
+    "print(adata)\n",
+    "print(adata.obs_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AnnData object with n_obs × n_vars = 2473 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y'\n",
-      "    var: 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
-      "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AnnData object with n_obs × n_vars = 2449 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y'\n",
-      "    var: 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
-      "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc2_cellranger-outs-filtered_feature_bc_matrix-matrix.h5ad\n",
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc2_cellranger-velocyto-ncc2_cellranger.h5ad\n"
      ]
     },
     {
@@ -139,12 +164,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AnnData object with n_obs × n_vars = 2464 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y'\n",
-      "    var: 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
-      "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n",
-      "AnnData object with n_obs × n_vars = 9892 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y', 'batch'\n",
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc3_cellranger-outs-filtered_feature_bc_matrix-matrix.h5ad\n",
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc3_cellranger-velocyto-ncc3_cellranger.h5ad\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc4_cellranger-outs-filtered_feature_bc_matrix-matrix.h5ad\n",
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc4_cellranger-velocyto-ncc4_cellranger.h5ad\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnnData object with n_obs × n_vars = 2506 × 36601\n",
+      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size'\n",
       "    var: 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
       "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
      ]
@@ -152,14 +203,12 @@
    ],
    "source": [
     "for i in range(1,len(sampleL)):\n",
-    "    tempdata =  scv.read(\"/storage/holab/linxy/vivian/\" + sampleL[i] + \"_cellranger/velocyto/\" + sampleL[i] + \"_cellranger.loom\", cache=True)\n",
-    "    tempdata.var_names_make_unique()\n",
-    "    #obs_name_rep = tempdata.obs_names.str.replace('ncc','s')\n",
-    "    #tempdata.obs_names = obs_name_rep\n",
-    "    print(tempdata)\n",
-    "    #print(tempdata.obs_names.is_unique)\n",
-    "    ldata = ldata.concatenate(tempdata, join='outer', index_unique=None)\n",
-    "    #print(ldata.obs_names.is_unique)\n",
+    "    tempadata = sc.read_10x_mtx('/storage/holab/linxy/vivian/' + sampleL[i] + '_cellranger/outs/filtered_feature_bc_matrix/', var_names='gene_symbols', cache=True)                             \n",
+    "    templdata =  scv.read(\"/storage/holab/linxy/vivian/\" + sampleL[i] + \"_cellranger/velocyto/\" + sampleL[i] + \"_cellranger.loom\", cache=True)\n",
+    "    tempadata.var_names_make_unique()\n",
+    "    tempadata = scv.utils.merge(tempadata, templdata)\n",
+    "    tempadata.obs_names = sampleL[i] + '_' + tempadata.obs_names\n",
+    "    adata = adata.concatenate(tempadata, join='outer', index_unique=None)\n",
     "\n",
     "print(ldata)"
    ]
@@ -173,79 +222,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['ncc1_cellranger:AACAAAGAGTGAGCCAx',\n",
-      "       'ncc1_cellranger:AAGAACACATTGCCTCx',\n",
-      "       'ncc1_cellranger:AACAACCAGGAGGTTCx',\n",
-      "       'ncc1_cellranger:AAAGGTACATGGTACTx',\n",
-      "       'ncc1_cellranger:AACGTCACAGAAGCTGx',\n",
-      "       'ncc1_cellranger:AACGTCAAGTAAGCATx',\n",
-      "       'ncc1_cellranger:AAAGGTACAATACAGAx',\n",
-      "       'ncc1_cellranger:AACAACCCAAGGGTCAx',\n",
-      "       'ncc1_cellranger:AACGGGAGTGAGTCAGx',\n",
-      "       'ncc1_cellranger:AAGGAATCATAGATCCx',\n",
+      "Index(['ncc1_AAACCCATCAGCAATC', 'ncc1_AAACGAACACGGTGCT',\n",
+      "       'ncc1_AAACGAACATTGTCGA', 'ncc1_AAACGCTCAAGAGGTC',\n",
+      "       'ncc1_AAACGCTGTGCCCGTA', 'ncc1_AAAGAACCAGAGGTAC',\n",
+      "       'ncc1_AAAGAACTCTTGCAAG', 'ncc1_AAAGGATCACCATAAC',\n",
+      "       'ncc1_AAAGGATCATGGCGCT', 'ncc1_AAAGGGCTCTTGGCTC',\n",
       "       ...\n",
-      "       'ncc4_cellranger:TTTCGATTCCGTGACGx',\n",
-      "       'ncc4_cellranger:TTTACGTTCACTTGGAx',\n",
-      "       'ncc4_cellranger:TTTATGCTCTCCATATx',\n",
-      "       'ncc4_cellranger:TTGTTCAGTGGCAACAx',\n",
-      "       'ncc4_cellranger:TTTCAGTCACATGGTTx',\n",
-      "       'ncc4_cellranger:TTGTTGTTCGATTGGTx',\n",
-      "       'ncc4_cellranger:TTGTTGTTCGCTCATCx',\n",
-      "       'ncc4_cellranger:TTGTGGAGTAACGTTCx',\n",
-      "       'ncc4_cellranger:TTGTGTTCATTAAAGGx',\n",
-      "       'ncc4_cellranger:TTGTGTTCAATCTCTTx'],\n",
-      "      dtype='object', name='CellID', length=9892)\n",
-      "True\n",
-      "Index(['ncc1_AACAAAGAGTGAGCCA', 'ncc1_AAGAACACATTGCCTC',\n",
-      "       'ncc1_AACAACCAGGAGGTTC', 'ncc1_AAAGGTACATGGTACT',\n",
-      "       'ncc1_AACGTCACAGAAGCTG', 'ncc1_AACGTCAAGTAAGCAT',\n",
-      "       'ncc1_AAAGGTACAATACAGA', 'ncc1_AACAACCCAAGGGTCA',\n",
-      "       'ncc1_AACGGGAGTGAGTCAG', 'ncc1_AAGGAATCATAGATCC',\n",
-      "       ...\n",
-      "       'ncc4_TTTCGATTCCGTGACG', 'ncc4_TTTACGTTCACTTGGA',\n",
-      "       'ncc4_TTTATGCTCTCCATAT', 'ncc4_TTGTTCAGTGGCAACA',\n",
-      "       'ncc4_TTTCAGTCACATGGTT', 'ncc4_TTGTTGTTCGATTGGT',\n",
-      "       'ncc4_TTGTTGTTCGCTCATC', 'ncc4_TTGTGGAGTAACGTTC',\n",
-      "       'ncc4_TTGTGTTCATTAAAGG', 'ncc4_TTGTGTTCAATCTCTT'],\n",
-      "      dtype='object', name='CellID', length=9892)\n"
+      "       'ncc4_TTTGACTTCAAGTGTC', 'ncc4_TTTGATCAGAGCGACT',\n",
+      "       'ncc4_TTTGGAGCATACAGAA', 'ncc4_TTTGGAGTCAAGTCGT',\n",
+      "       'ncc4_TTTGGTTGTTTGCCGG', 'ncc4_TTTGGTTTCTCCTACG',\n",
+      "       'ncc4_TTTGTTGAGCATGATA', 'ncc4_TTTGTTGAGGTTGTTC',\n",
+      "       'ncc4_TTTGTTGCACACGTGC', 'ncc4_TTTGTTGGTTTCCAAG'],\n",
+      "      dtype='object', length=9892)\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "## change obs_names\n",
-    "print(ldata.obs_names)\n",
-    "obs_name_rep = ldata.obs_names.str.replace('cellranger:|x','')\n",
-    "ldata.obs_names = obs_name_rep\n",
-    "print(np.unique(ldata.obs_names).size == len(ldata.obs_names))\n",
-    "print(ldata.obs_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "7357\n"
-     ]
-    }
-   ],
-   "source": [
-    "## change cellID name in metadata\n",
-    "cellID_obs['x'] = cellID_obs['x'].str.replace('-1', '')\n",
-    "print(np.unique(cellID_obs['x']).size == len(cellID_obs['x']))  ## check whether have duplicate barcodes\n",
-    "print(len(cellID_obs))"
+    "print(adata.obs_names)\n",
+    "print(np.unique(adata.obs_names).size == len(adata.obs_names))"
    ]
   },
   {
@@ -254,24 +257,60 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "7357\n",
+      "                          x\n",
+      "0     ncc1_AAACCCATCAGCAATC\n",
+      "1     ncc1_AAACGAACACGGTGCT\n",
+      "2     ncc1_AAACGAACATTGTCGA\n",
+      "3     ncc1_AAACGCTCAAGAGGTC\n",
+      "4     ncc1_AAACGCTGTGCCCGTA\n",
+      "...                     ...\n",
+      "7352  ncc4_TTTGGAGTCAAGTCGT\n",
+      "7353  ncc4_TTTGGTTGTTTGCCGG\n",
+      "7354  ncc4_TTTGGTTTCTCCTACG\n",
+      "7355  ncc4_TTTGTTGCACACGTGC\n",
+      "7356  ncc4_TTTGTTGGTTTCCAAG\n",
+      "\n",
+      "[7357 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## change cellID name in metadata\n",
+    "cellID_obs['x'] = cellID_obs['x'].str.replace('-1', '')\n",
+    "print(np.unique(cellID_obs['x']).size == len(cellID_obs['x']))  ## check whether have duplicate barcodes\n",
+    "print(len(cellID_obs))\n",
+    "print(cellID_obs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/plain": [
        "7357"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_barcode = np.intersect1d(cellID_obs['x'],ldata.obs_names)\n",
+    "filtered_barcode = np.intersect1d(cellID_obs['x'],adata.obs_names)\n",
     "len(filtered_barcode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -279,15 +318,15 @@
      "output_type": "stream",
      "text": [
       "AnnData object with n_obs × n_vars = 7357 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y', 'batch'\n",
-      "    var: 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
+      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size', 'batch'\n",
+      "    var: 'gene_ids', 'feature_types', 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
       "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
      ]
     }
    ],
    "source": [
-    "filtered_ldata = ldata[filtered_barcode].copy()\n",
-    "print(filtered_ldata)"
+    "filtered_adata = adata[filtered_barcode].copy()\n",
+    "print(filtered_adata)"
    ]
   },
   {
@@ -299,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -324,13 +363,14 @@
     }
    ],
    "source": [
-    "ldata_index = pd.DataFrame(filtered_ldata.obs.index)\n",
-    "print(ldata_index)"
+    "adata_index = pd.DataFrame(filtered_adata.obs.index)\n",
+    "adata_index.columns = ['CellID']\n",
+    "print(adata_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -358,23 +398,23 @@
     "umap_cord = umap_cord.rename(columns = {'Unnamed: 0':'CellID'})\n",
     "#umap_cord = umap_cord.rename(columns = {'Cell ID':'CellID'})\n",
     "umap_cord['CellID'] = umap_cord['CellID'].str.replace('-1', '')\n",
-    "umap_ordered = ldata_index.merge(umap_cord, on = \"CellID\")\n",
+    "umap_ordered = adata_index.merge(umap_cord, on = \"CellID\")\n",
     "print(umap_cord)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "umap_ordered = umap_ordered.iloc[:,1:]\n",
-    "filtered_ldata.obsm['X_umap'] = umap_ordered.values"
+    "filtered_adata.obsm['X_umap'] = umap_ordered.values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +441,13 @@
    "source": [
     "cell_clusters = cell_clusters.rename(columns = {'Unnamed: 0':'CellID'})\n",
     "cell_clusters['CellID'] = cell_clusters['CellID'].str.replace('-1', '')\n",
-    "cell_clusters = ldata_index.merge(cell_clusters, on = \"CellID\")\n",
+    "cell_clusters = adata_index.merge(cell_clusters, on = \"CellID\")\n",
     "print(cell_clusters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -415,8 +455,8 @@
      "output_type": "stream",
      "text": [
       "AnnData object with n_obs × n_vars = 7357 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y', 'batch', 'seurat_clusters'\n",
-      "    var: 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
+      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size', 'batch', 'seurat_clusters'\n",
+      "    var: 'gene_ids', 'feature_types', 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
       "    obsm: 'X_umap'\n",
       "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
      ]
@@ -424,17 +464,25 @@
    ],
    "source": [
     "cell_clusters = cell_clusters.iloc[:,1:]\n",
-    "filtered_ldata.obs['seurat_clusters'] = cell_clusters.values\n",
-    "print(filtered_ldata)"
+    "filtered_adata.obs['seurat_clusters'] = cell_clusters.values\n",
+    "print(filtered_adata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "... storing 'feature_types' as categorical\n"
+     ]
+    }
+   ],
    "source": [
-    "filtered_ldata.write(results_file)"
+    "filtered_adata.write(results_file)"
    ]
   },
   {
