--- a/veloAE_preprocess.ipynb
+++ b/veloAE_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,30 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "results_file = '/storage/holab/linxy/vivian/scanpy/ncc_seurate.h5ad'  # the file that will store the analysis results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "scanpy==1.8.2 anndata==0.7.8 umap==0.5.3 numpy==1.20.3 scipy==1.6.2 pandas==1.2.4 scikit-learn==0.24.1 statsmodels==0.12.2 pynndescent==0.5.6\n"
-     ]
-    }
-   ],
-   "source": [
-    "sc.settings.verbosity = 3             # verbosity: errors (0), warnings (1), info (2), hints (3)\n",
-    "sc.logging.print_header()\n",
-    "sc.settings.set_figure_params(dpi=80, facecolor='white')"
    ]
   },
   {
@@ -51,27 +32,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                         x\n",
-      "0  ncc1_AAACCCATCAGCAATC-1\n",
-      "1  ncc1_AAACGAACACGGTGCT-1\n",
-      "2  ncc1_AAACGAACATTGTCGA-1\n",
-      "3  ncc1_AAACGCTCAAGAGGTC-1\n",
-      "4  ncc1_AAACGCTGTGCCCGTA-1\n",
-      "7357\n",
-      "                   Unnamed: 0    UMAP_1    UMAP_2\n",
-      "0     ncc1_AAACCCATCAGCAATC-1  0.913846  0.550288\n",
-      "1     ncc1_AAACGAACACGGTGCT-1 -1.886460  2.125017\n",
-      "2     ncc1_AAACGAACATTGTCGA-1  4.905686  0.409525\n",
-      "3     ncc1_AAACGCTCAAGAGGTC-1  3.466465  0.183858\n",
-      "4     ncc1_AAACGCTGTGCCCGTA-1 -4.015033 -5.032781\n",
-      "...                       ...       ...       ...\n",
-      "7352  ncc4_TTTGGAGTCAAGTCGT-1  3.743522  0.089498\n",
-      "7353  ncc4_TTTGGTTGTTTGCCGG-1 -5.931196  0.739618\n",
-      "7354  ncc4_TTTGGTTTCTCCTACG-1 -3.608194 -5.238413\n",
-      "7355  ncc4_TTTGTTGCACACGTGC-1 -0.909402 -0.013683\n",
-      "7356  ncc4_TTTGTTGGTTTCCAAG-1 -4.805133 -1.220025\n",
+      "scanpy==1.9.1 anndata==0.8.0 umap==0.5.3 numpy==1.21.6 scipy==1.8.0 pandas==1.4.2 scikit-learn==1.0.2 statsmodels==0.13.2 python-igraph==0.9.10 pynndescent==0.5.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc.settings.verbosity = 3             # verbosity: errors (0), warnings (1), info (2), hints (3)\n",
+    "sc.logging.print_header()\n",
+    "sc.settings.set_figure_params(dpi=80, facecolor='white')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     x\n",
+      "0  s1_AAACCCATCAGCAATC\n",
+      "1  s1_AAACGAACATTGTCGA\n",
+      "2  s1_AAAGGATCATGGCGCT\n",
+      "3  s1_AAAGGTAAGCGAATGC\n",
+      "4  s1_AAAGGTACAACTCGAT\n",
+      "10601\n",
+      "                Unnamed: 0    UMAP_1    UMAP_2\n",
+      "0      s1_AAACCCATCAGCAATC -0.249159  1.993144\n",
+      "1      s1_AAACGAACATTGTCGA -4.781256 -1.208898\n",
+      "2      s1_AAAGGATCATGGCGCT  5.002699  0.477262\n",
+      "3      s1_AAAGGTAAGCGAATGC  1.732118  2.226997\n",
+      "4      s1_AAAGGTACAACTCGAT -2.830450 -3.581742\n",
+      "...                    ...       ...       ...\n",
+      "10596  s4_TTTGGTTTCTCCTACG  0.079327  4.613376\n",
+      "10597  s4_TTTGTTGAGCATGATA  5.325161  3.589683\n",
+      "10598  s4_TTTGTTGCACGGCGTT -3.065098 -1.001408\n",
+      "10599  s4_TTTGTTGGTTTCCAAG  5.786833  2.374338\n",
+      "10600  s4_TTTGTTGTCATTGTTC -1.951135 -2.078952\n",
       "\n",
-      "[7357 rows x 3 columns]\n"
+      "[10601 rows x 3 columns]\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,20 +96,7 @@
      "output_type": "stream",
      "text": [
       "... reading from cache file cache/storage-holab-linxy-vivian-ncc1_cellranger-outs-filtered_feature_bc_matrix-matrix.h5ad\n",
-      "... reading from cache file cache/storage-holab-linxy-vivian-ncc1_cellranger-velocyto-ncc1_cellranger.h5ad\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Variable names are not unique. To make them unique, call `.var_names_make_unique`.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "... reading from cache file cache/storage-holab-linxy-vivian-ncc1_cellranger-velocyto-ncc1_cellranger.h5ad\n",
       "AnnData object with n_obs × n_vars = 2506 × 36601\n",
       "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size'\n",
       "    var: 'gene_ids', 'feature_types', 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
@@ -222,37 +209,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['ncc1_AAACCCATCAGCAATC', 'ncc1_AAACGAACACGGTGCT',\n",
-      "       'ncc1_AAACGAACATTGTCGA', 'ncc1_AAACGCTCAAGAGGTC',\n",
-      "       'ncc1_AAACGCTGTGCCCGTA', 'ncc1_AAAGAACCAGAGGTAC',\n",
-      "       'ncc1_AAAGAACTCTTGCAAG', 'ncc1_AAAGGATCACCATAAC',\n",
-      "       'ncc1_AAAGGATCATGGCGCT', 'ncc1_AAAGGGCTCTTGGCTC',\n",
-      "       ...\n",
-      "       'ncc4_TTTGACTTCAAGTGTC', 'ncc4_TTTGATCAGAGCGACT',\n",
-      "       'ncc4_TTTGGAGCATACAGAA', 'ncc4_TTTGGAGTCAAGTCGT',\n",
-      "       'ncc4_TTTGGTTGTTTGCCGG', 'ncc4_TTTGGTTTCTCCTACG',\n",
-      "       'ncc4_TTTGTTGAGCATGATA', 'ncc4_TTTGTTGAGGTTGTTC',\n",
-      "       'ncc4_TTTGTTGCACACGTGC', 'ncc4_TTTGTTGGTTTCCAAG'],\n",
-      "      dtype='object', length=9892)\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "## change obs_names\n",
-    "print(adata.obs_names)\n",
-    "print(np.unique(adata.obs_names).size == len(adata.obs_names))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -260,22 +216,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Index(['s1_AAACCCATCAGCAATC', 's1_AAACGAACACGGTGCT', 's1_AAACGAACATTGTCGA',\n",
+      "       's1_AAACGCTCAAGAGGTC', 's1_AAACGCTGTGCCCGTA', 's1_AAAGAACCAGAGGTAC',\n",
+      "       's1_AAAGAACTCTTGCAAG', 's1_AAAGGATCACCATAAC', 's1_AAAGGATCATGGCGCT',\n",
+      "       's1_AAAGGGCTCTTGGCTC',\n",
+      "       ...\n",
+      "       's1_TTTGACTTCAAGTGTC', 's1_TTTGATCAGAGCGACT', 's1_TTTGGAGCATACAGAA',\n",
+      "       's1_TTTGGAGTCAAGTCGT', 's1_TTTGGTTGTTTGCCGG', 's1_TTTGGTTTCTCCTACG',\n",
+      "       's1_TTTGTTGAGCATGATA', 's1_TTTGTTGAGGTTGTTC', 's1_TTTGTTGCACACGTGC',\n",
+      "       's1_TTTGTTGGTTTCCAAG'],\n",
+      "      dtype='object', length=2506)\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## change obs_names\n",
+    "adata.obs_names = adata.obs_names.str.replace('ncc', 's')\n",
+    "print(adata.obs_names)\n",
+    "print(np.unique(adata.obs_names).size == len(adata.obs_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "True\n",
-      "7357\n",
-      "                          x\n",
-      "0     ncc1_AAACCCATCAGCAATC\n",
-      "1     ncc1_AAACGAACACGGTGCT\n",
-      "2     ncc1_AAACGAACATTGTCGA\n",
-      "3     ncc1_AAACGCTCAAGAGGTC\n",
-      "4     ncc1_AAACGCTGTGCCCGTA\n",
-      "...                     ...\n",
-      "7352  ncc4_TTTGGAGTCAAGTCGT\n",
-      "7353  ncc4_TTTGGTTGTTTGCCGG\n",
-      "7354  ncc4_TTTGGTTTCTCCTACG\n",
-      "7355  ncc4_TTTGTTGCACACGTGC\n",
-      "7356  ncc4_TTTGTTGGTTTCCAAG\n",
+      "10601\n",
+      "                         x\n",
+      "0      s1_AAACCCATCAGCAATC\n",
+      "1      s1_AAACGAACATTGTCGA\n",
+      "2      s1_AAAGGATCATGGCGCT\n",
+      "3      s1_AAAGGTAAGCGAATGC\n",
+      "4      s1_AAAGGTACAACTCGAT\n",
+      "...                    ...\n",
+      "10596  s4_TTTGGTTTCTCCTACG\n",
+      "10597  s4_TTTGTTGAGCATGATA\n",
+      "10598  s4_TTTGTTGCACGGCGTT\n",
+      "10599  s4_TTTGTTGGTTTCCAAG\n",
+      "10600  s4_TTTGTTGTCATTGTTC\n",
       "\n",
-      "[7357 rows x 1 columns]\n"
+      "[10601 rows x 1 columns]\n"
      ]
     }
    ],
@@ -289,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7357"
+       "1330"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,15 +296,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AnnData object with n_obs × n_vars = 7357 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size', 'batch'\n",
+      "AnnData object with n_obs × n_vars = 1330 × 36601\n",
+      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size'\n",
       "    var: 'gene_ids', 'feature_types', 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
       "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
      ]
@@ -338,27 +324,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     CellID\n",
-      "0     ncc1_AAACCCATCAGCAATC\n",
-      "1     ncc1_AAACGAACACGGTGCT\n",
-      "2     ncc1_AAACGAACATTGTCGA\n",
-      "3     ncc1_AAACGCTCAAGAGGTC\n",
-      "4     ncc1_AAACGCTGTGCCCGTA\n",
-      "...                     ...\n",
-      "7352  ncc4_TTTGGAGTCAAGTCGT\n",
-      "7353  ncc4_TTTGGTTGTTTGCCGG\n",
-      "7354  ncc4_TTTGGTTTCTCCTACG\n",
-      "7355  ncc4_TTTGTTGCACACGTGC\n",
-      "7356  ncc4_TTTGTTGGTTTCCAAG\n",
+      "                   CellID\n",
+      "0     s1_AAACCCATCAGCAATC\n",
+      "1     s1_AAACGAACATTGTCGA\n",
+      "2     s1_AAAGGATCATGGCGCT\n",
+      "3     s1_AAAGGTATCACCTGGG\n",
+      "4     s1_AAAGTCCAGAGATCGC\n",
+      "...                   ...\n",
+      "1325  s1_TTTGATCAGAGCGACT\n",
+      "1326  s1_TTTGGTTGTTTGCCGG\n",
+      "1327  s1_TTTGGTTTCTCCTACG\n",
+      "1328  s1_TTTGTTGAGCATGATA\n",
+      "1329  s1_TTTGTTGGTTTCCAAG\n",
       "\n",
-      "[7357 rows x 1 columns]\n"
+      "[1330 rows x 1 columns]\n"
      ]
     }
    ],
@@ -370,27 +356,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     CellID    UMAP_1    UMAP_2\n",
-      "0     ncc1_AAACCCATCAGCAATC  0.913846  0.550288\n",
-      "1     ncc1_AAACGAACACGGTGCT -1.886460  2.125017\n",
-      "2     ncc1_AAACGAACATTGTCGA  4.905686  0.409525\n",
-      "3     ncc1_AAACGCTCAAGAGGTC  3.466465  0.183858\n",
-      "4     ncc1_AAACGCTGTGCCCGTA -4.015033 -5.032781\n",
-      "...                     ...       ...       ...\n",
-      "7352  ncc4_TTTGGAGTCAAGTCGT  3.743522  0.089498\n",
-      "7353  ncc4_TTTGGTTGTTTGCCGG -5.931196  0.739618\n",
-      "7354  ncc4_TTTGGTTTCTCCTACG -3.608194 -5.238413\n",
-      "7355  ncc4_TTTGTTGCACACGTGC -0.909402 -0.013683\n",
-      "7356  ncc4_TTTGTTGGTTTCCAAG -4.805133 -1.220025\n",
+      "                    CellID    UMAP_1    UMAP_2\n",
+      "0      s1_AAACCCATCAGCAATC -0.249159  1.993144\n",
+      "1      s1_AAACGAACATTGTCGA -4.781256 -1.208898\n",
+      "2      s1_AAAGGATCATGGCGCT  5.002699  0.477262\n",
+      "3      s1_AAAGGTAAGCGAATGC  1.732118  2.226997\n",
+      "4      s1_AAAGGTACAACTCGAT -2.830450 -3.581742\n",
+      "...                    ...       ...       ...\n",
+      "10596  s4_TTTGGTTTCTCCTACG  0.079327  4.613376\n",
+      "10597  s4_TTTGTTGAGCATGATA  5.325161  3.589683\n",
+      "10598  s4_TTTGTTGCACGGCGTT -3.065098 -1.001408\n",
+      "10599  s4_TTTGTTGGTTTCCAAG  5.786833  2.374338\n",
+      "10600  s4_TTTGTTGTCATTGTTC -1.951135 -2.078952\n",
       "\n",
-      "[7357 rows x 3 columns]\n"
+      "[10601 rows x 3 columns]\n"
      ]
     }
    ],
@@ -404,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,27 +400,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                     CellID  x\n",
-      "0     ncc1_AAACCCATCAGCAATC  7\n",
-      "1     ncc1_AAACGAACACGGTGCT  1\n",
-      "2     ncc1_AAACGAACATTGTCGA  0\n",
-      "3     ncc1_AAACGCTCAAGAGGTC  0\n",
-      "4     ncc1_AAACGCTGTGCCCGTA  7\n",
-      "...                     ... ..\n",
-      "7352  ncc4_TTTGGAGTCAAGTCGT  0\n",
-      "7353  ncc4_TTTGGTTGTTTGCCGG  5\n",
-      "7354  ncc4_TTTGGTTTCTCCTACG  7\n",
-      "7355  ncc4_TTTGTTGCACACGTGC  1\n",
-      "7356  ncc4_TTTGTTGGTTTCCAAG  4\n",
+      "                   CellID  x\n",
+      "0     s1_AAACCCATCAGCAATC  5\n",
+      "1     s1_AAACGAACATTGTCGA  0\n",
+      "2     s1_AAAGGATCATGGCGCT  2\n",
+      "3     s1_AAAGGTATCACCTGGG  0\n",
+      "4     s1_AAAGTCCAGAGATCGC  0\n",
+      "...                   ... ..\n",
+      "1325  s1_TTTGATCAGAGCGACT  2\n",
+      "1326  s1_TTTGGTTGTTTGCCGG  4\n",
+      "1327  s1_TTTGGTTTCTCCTACG  5\n",
+      "1328  s1_TTTGTTGAGCATGATA  2\n",
+      "1329  s1_TTTGTTGGTTTCCAAG  2\n",
       "\n",
-      "[7357 rows x 2 columns]\n"
+      "[1330 rows x 2 columns]\n"
      ]
     }
    ],
@@ -447,15 +433,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AnnData object with n_obs × n_vars = 7357 × 36601\n",
-      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size', 'batch', 'seurat_clusters'\n",
+      "AnnData object with n_obs × n_vars = 1330 × 36601\n",
+      "    obs: 'Clusters', '_X', '_Y', 'initial_size_spliced', 'initial_size_unspliced', 'initial_size', 'seurat_clusters'\n",
       "    var: 'gene_ids', 'feature_types', 'Accession', 'Chromosome', 'End', 'Start', 'Strand'\n",
       "    obsm: 'X_umap'\n",
       "    layers: 'ambiguous', 'matrix', 'spliced', 'unspliced'\n"
@@ -470,17 +456,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "... storing 'feature_types' as categorical\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "filtered_adata.write(results_file)"
    ]
@@ -495,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 ('vivian_data')",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +487,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a64fe1eb43e77208f7437c323433492ce54228dd05839b383bbf57d8be2c5644"
+   }
   }
  },
  "nbformat": 4,
