--- a/veloAE_practice.ipynb
+++ b/veloAE_practice.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells with 'Python 3.6.8 64-bit' requires jupyter and notebook package.\n",
+      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U'\n",
+      "Click <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -19,18 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Namespace(adata=None, aux_weight=1.0, conv_thred=1e-06, data_dir=None, device='cuda:2', exp_name='CohAE_dentategyrus', fit_offset_pred=True, fit_offset_train=False, g_rep_dim=100, gnn_layer='GAT', gumbsoft_tau=5.0, h_dim=256, is_half=False, k_dim=100, ld_adata='projection.h5', ld_nb_g_src='X', log_interval=100, lr=1e-05, lr_decay=0.9, mask_cluster_list=None, model_name='dentategyrus_model.cpt', n_conn_nb=30, n_epochs=20000, n_nb_newadata=30, n_raw_gene=2000, nb_g_src='X', output='./', refit=True, scv_n_jobs=10, seed=42, sl1_beta=1.0, use_norm=False, use_offset_pred=False, use_x=False, v_rg_wt=0.0, vis_key='X_umap', vis_type_col='leiden', weight_decay=0.0, z_dim=100)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells with 'Python 3.6.8 64-bit' requires jupyter and notebook package.\n",
+      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U'\n",
+      "Click <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
     }
    ],
    "source": [
