--- a/veloAE_preprocess.ipynb
+++ b/veloAE_preprocess.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells with 'Python 3.6.8 64-bit' requires jupyter and notebook package.\n",
+      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U'\n",
+      "Click <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "import anndata\n",
     "import scvelo as scv\n",
@@ -78,7 +92,7 @@
    "source": [
     "# get meta-data information\n",
     "path = \"/storage/holab/linxy/vivian/veloAE/\"\n",
-    "cellID_obs = pd.read_csv(path + \"ncc_cellID_obs.csv\")\n",
+    "cellID_obs = pd.read_csv(path + \"ncc_cellID.csv\")\n",
     "print(cellID_obs.head())\n",
     "print(len(cellID_obs))\n",
     "umap_cord = pd.read_csv(path + \"ncc_cell_embeddings.csv\")\n",
@@ -473,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('vivian_data')",
+   "display_name": "Python 3.7.13 ('veloAE')",
    "language": "python",
    "name": "python3"
   },
@@ -487,11 +501,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.7.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a64fe1eb43e77208f7437c323433492ce54228dd05839b383bbf57d8be2c5644"
+    "hash": "7344c7d0715a2f7d0deaa4af8fae64638b86a614dee3631f34dd23dde8c417b2"
    }
   }
  },
