--- a/veloAE_preprocess_euhku.ipynb
+++ b/veloAE_preprocess_euhku.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "sampleL = [\"ncc\", \"mes\", \"190PBMCiPSC_D7NOTO_drug\", \"190PBMCiPSC_D7NOTO_sample\", \"190PBMCiPSC_D7NT_sample\", \"ThermoFiPSC_D7NOTO_drug\", \"ThermoFiPSC_D7NOTO_sample\", \"ThermoFiPSC_D7NT_sample\"]\n",
-    "sample = 'ncc_mes_eu'\n",
+    "sample = 'TC'\n",
     "results_file = '/home/linxy29/holab/linxy/iPSC/veloAE/' + sample + '_seurate.h5ad'  # the file that will store the analysis results"
    ]
   },
@@ -462,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.6.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -476,11 +476,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.6.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7344c7d0715a2f7d0deaa4af8fae64638b86a614dee3631f34dd23dde8c417b2"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
