--- a/veloAE_preprocess_comb.ipynb
+++ b/veloAE_preprocess_comb.ipynb
@@ -6,13 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import anndata\n",
     "import scvelo as scv\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import scanpy as sc\n",
-    "import glob, os"
+    "import glob"
    ]
   },
   {
